Change error pages

--- a/public/422.html
+++ b/public/422.html
@@ -1,1 +1,10 @@
-422 Unprocessable Entity
+<!DOCTYPE html>
+<html>
+<head>
+  <title>422 Unprocessable Entity</title>
+  <meta name='viewport' content='width=device-width,initial-scale=1'>
+</head>
+<body>
+  422 Unprocessable Entity
+</body>
+</html>
