--- a/public/404.html
+++ b/public/404.html
@@ -1,1 +1,10 @@
-404 Not Found
+<!DOCTYPE html>
+<html>
+<head>
+  <title>404 Not Found</title>
+  <meta name='viewport' content='width=device-width,initial-scale=1'>
+</head>
+<body>
+  404 Not Found
+</body>
+</html>
