--- a/public/500.html
+++ b/public/500.html
@@ -1,1 +1,10 @@
-500 Internal Server Error
+<!DOCTYPE html>
+<html>
+<head>
+  <title>500 Internal Server Error</title>
+  <meta name='viewport' content='width=device-width,initial-scale=1'>
+</head>
+<body>
+  500 Internal Server Error
+</body>
+</html>
